--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
     <div class="context">
         <h1>Привіт</h1>
     </div>
+    <button id="startbtn">START</button>
    </div> 
+   
 
    <div class="container">
     <div class="context">
-        <h1>Софія</h1>
+        <h1 class="textt">Софія</h1>
     </div>
+    <button id="pausebtn">PAUSE</button>
    </div> 
 
    <div class="container">
     <div class="context">
         <h1>Федина</h1>
     </div>
+    <button id="stopbtn">STOP</button>
    </div> 
 
-<script src="js/script.js"></script>
+<script src="skript.js"></script>
 </body>
 </html>
