--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
     <div class="context">
         <h1>Привіт</h1>
     </div>
-    <button id="startbtn">START</button>
+    <button id="startbtn">Почати любити</button>
    </div> 
    
 
    <div class="container">
     <div class="context">
-        <h1 class="textt">Софія</h1>
+        <h1 class="textt">Софія</h1><h1 class="texttt">%</h1>
     </div>
-    <button id="pausebtn">PAUSE</button>
+    <button id="pausebtn">От стільки люблю</button>
    </div> 
 
    <div class="container">
     <div class="context">
         <h1>Федина</h1>
     </div>
-    <button id="stopbtn">STOP</button>
+    <button id="stopbtn">А дізнайсякого саме</button>
    </div> 
 
 <script src="skript.js"></script>
